--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,5 @@
+name: Deploy HTML Files to AppService - CMST386
+
 on:
 
   push:
@@ -16,7 +18,7 @@ jobs:
 
     - uses: actions/checkout@main
 
-    - name: Deploy HTML files to AppService - CMST386
+    - name: Deploy to Azure Web App
 
       uses: azure/webapps-deploy@v1
 
@@ -24,10 +26,10 @@ jobs:
 
       #Change the app-name to match what was provided to you in the publish settings file, this is in a naming convention of 'COURSENAME-STUDENTUID'
 
-        app-name: 'cmst385-jgaskill1'
+        app-name: 'CMST386-jgaskill1'
 
         slot-name: 'production'
 
       #Change the publish profile to match what you named your secret setup in GitHub, Example shown below
 
-        publish-profile: secrets.AppServiceCMST386 
+        publish-profile: ${{ secrets.AppServiceCMST386 }}
